solved white space

--- a/src/Components/css/Events/regForm.css
+++ b/src/Components/css/Events/regForm.css
@@ -86,6 +86,7 @@
   border: none;
   font-size: 20px;
   cursor: pointer;
+  margin: 2%;
 }
 
 .team {
@@ -149,14 +150,17 @@ input {
 .inputField {
   width: 90%;
 }
-
 .radioLabel {
-  margin-right: 20%;
   font-weight: 100;
+  width: auto;
+  background-color: transparent;
+  border-style: none;
+  text-align: left;
+  padding-left: 2%;
 }
 
 .radioInp {
-  width: 50%;
+  width: auto;
   margin: 0;
   margin-right: 7px;
 }
